--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,8 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+    implementation libs.viewpager2
+    implementation libs.material
+    implementation libs.material.v140
+
 }
