--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    alias(libs.plugins.androidApplication)
+    id 'com.android.application'
+    id 'androidx.navigation.safeargs'
 }
 
 android {
@@ -42,8 +43,8 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
-    implementation libs.viewpager2
     implementation libs.material
     implementation libs.material.v140
-
+    implementation "androidx.navigation:navigation-fragment:2.7.7"
+    implementation "androidx.navigation:navigation-ui:2.7.7"
 }
