--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 buildscript {
     repositories {
         google()
+        mavenCentral()  // Maven Central repository
+
     }
     dependencies {
         def nav_version = "2.7.7"
@@ -13,4 +15,5 @@ buildscript {
 plugins {
     id("com.android.application") version '8.4.1' apply false
     id("com.android.library") version '8.4.1' apply false
+    id 'com.google.gms.google-services' version '4.4.1' apply false
 }
