--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,14 @@ dependencies {
     implementation( libs.firebase.firestore)
     implementation(libs.firebase.storage)
     implementation(libs.firebase.auth)
+    implementation libs.androidx.core.splashscreen
+    implementation libs.gson
+    implementation libs.retrofit
+    implementation libs.retrofit2.converter.gson
+    implementation libs.androidx.swiperefreshlayout
+
+
+
 
 
 }
